# OfflineOnline

./: .gitignore  cleanXvfb.sh  flake.nix  main.py  pyproject.toml
src/OfflineOnline/LMU/: __init__.py  discretizeAB.py  e_approximates.py  flattened_layer.py  generate_polynomials.py  main.py  memory_np.py  memory_tr.py
src/OfflineOnline/config/: constants.py  hyperparams.py  latent.py  paths.py
src/OfflineOnline/control/: __init__.py  action_value.py  circular_queue.py  epsilon_greedy.py
src/OfflineOnline/encoder/: __init__.py  gaussify.py  reconstruct.py
src/OfflineOnline/environment/: __init__.py  childprocess.py  keywords.py  vgui.py  vgui_batcher.py
src/OfflineOnline/environment/utils/: align_screen.py  check_end.py  gameover.array  numpy_similarity.py  save_crash.py  slice_shape.py  suppress_warning.py  virtual_user.py  wait_on_img.py
src/OfflineOnline/orchestration/: __init__.py  environment_loop.py  training_loop.py
src/OfflineOnline/worldmodel/: __init__.py  crossentropy.py  dynamics.py
src/environment/: __init__.py  keywords.py  localpaths.py  vgui.py  vgui_batcher.py
src/environment/utils/: suppress_warning.py  virtual_user.py  wait_on_img.py
tests/: test_orchestration.py
tests/LMU/: test_LMUlayer.py  test_e_approx.py  test_flattenedlayer.py  test_polynomial.py  test_update.py
tests/control/: simple_problem.py  test_chooseaction.py  test_circular_queue.py  test_sarsa.py  test_sarsa_single.py  test_window_manipulation.py
tests/environment/: test_batcher.py  test_checkend.py  test_similarity.py
tests/worldmodel/: test_loss.py
