[project]
name = "OfflineOnline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyautogui>=0.9.54",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "xvfbwrapper>=0.2.18",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
